Istio-k8s-Manifests/istio-dark-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
spec:
  selector:
    matchLabels:
      app: front-deploy
  replicas: 1
  template: 
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: front-deploy
    spec:
      containers:
      - image: tegexploredevops/images:dark-release-front
        name: front-deploy       
        ports:
        - containerPort: 7000
        
---

apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front-deploy
  ports:
    - name: http
      port: 5000
      targetPort: 7000
      
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mid-deploy
spec:
  selector:
    matchLabels:
      app: mid-deploy
  replicas: 1
  template: 
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: mid-deploy
    spec:
      containers:
      - image: tegexploredevops/images:dark-release-mid
        name: mid-deploy      
        ports:
        - containerPort: 8000
        
---

apiVersion: v1
kind: Service
metadata:
  name: mid-service
spec:
  selector:
    app: mid-deploy
  ports:
    - name: http
      port: 6000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy-v1
spec:
  selector:
    matchLabels:
      app: back-deploy
  replicas: 1
  template: 
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: back-deploy
        version: original
    spec:
      containers:
      - image: tegexploredevops/images:dark-release-back-v1
        name: back-deploy      
        ports:
        - containerPort: 9000
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy-v2
spec:
  selector:
    matchLabels:
      app: back-deploy
  replicas: 1
  template: 
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: back-deploy
        version: canary
    spec:
      containers:
      - image: tegexploredevops/images:dark-release-back-v2
        name: back-deploy      
        ports:
        - containerPort: 9000
        
---

apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back-deploy
  ports:
    - name: http
      port: 7000
      targetPort: 9000


---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs-gateway
  namespace: default
spec:
  hosts:
    - back-service
  http:
    - match:
        - headers:
            x-my-header:
              exact: canary
      route:
        - destination:
            host: back-service
            subset: canary-group
    - route:
        - destination:
            host: back-service
            subset: original-group
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: dr-gateway
  namespace: default
spec:
  host: back-service
  subsets:
    - labels:
        version: original
      name: original-group
    - labels:
        version: canary
      name: canary-group
