Istio-k8s-Manifests/istio-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy-original-gateway
spec:
  selector:
    matchLabels:
      app: back-deploy-gate
  replicas: 1
  template: # template for the pods
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: back-deploy-gate
        version: original
    spec:
      containers:
      - name: back-deploy-gate 
        image: tegexploredevops/images:gateway-original
        ports:
        - containerPort: 9000
        
---
        
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy-canary-gateway
spec:
  selector:
    matchLabels:
      app: back-deploy-gate
  replicas: 1
  template: # template for the pods
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: back-deploy-gate
        version: canary
    spec:
      containers:
      - name: back-deploy-gate 
        image: tegexploredevops/images:gateway-canary
        ports:
        - containerPort: 9000

---

apiVersion: v1
kind: Service
metadata:
  name: back-service-gate
spec:
  selector:
    app: back-deploy-gate
  ports:
    - name: http
      port: 4000
      targetPort: 9000
      
---

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"   # Domain name of the external website
    
---

kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: virtual-service
  namespace: default
spec:
  hosts:          # which incoming host are we applying the proxy rules to???
    - "*"         # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: back-service-gate
            subset: original
          weight: 50
        - destination:
            host: back-service-gate
            subset: canary
          weight: 50
          
---

kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: destination-rule
  namespace: default
spec:
  host: back-service-gate
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: canary
      name: canary
